--- a/Intensely/style.css
+++ b/Intensely/style.css
@@ -1485,20 +1485,21 @@ img{
   position: relative;
 }
 
-.subscrib-form input {
+.subscrib-form input, .subscrib-form select {
   border: medium none;
   border-radius:4px;
   color: #444;
   font-size: 18px;
   height: 50px;
   outline: medium none;
-  padding: 5px 105px 5px 10px;
+  padding: 5px 10px;
   width: 100%;
 }
 
 .subscribe-btn { 
   border: medium none;
-  border-radius: 0 4px 4px 0;
+  /*border-radius: 0 4px 4px 0;*/
+  border-radius: 4px;
   color: #fff;
   font-size: 18px;
   font-weight: bold;
@@ -1506,7 +1507,7 @@ img{
   top: 0;
   letter-spacing: 0.5px;
   outline: medium none;
-  position: absolute;
+  /*position: absolute;*/
   right: 0;
   text-transform: uppercase;
   width: 120px;
